# worldplace

./: .gitignore  Cargo.toml  NOTES.md  README.md  build.rs  justfile
abi/: Worldplace.json
contracts/: Worldplace.sol
crates/worldplace_abi/: Cargo.toml  build.rs
crates/worldplace_abi/contracts/: Worldplace.sol
crates/worldplace_abi/src/: lib.rs
crates/worldplace_app/: Cargo.toml
crates/worldplace_app/src/: app.rs  contract.rs  hooks.rs  main.rs
crates/worldplace_cli/: Cargo.toml
crates/worldplace_cli/src/: main.rs
crates/worldplace_contract/: Cargo.toml
crates/worldplace_contract/src/: contract.rs  main.rs
src/: contract.rs  main.rs
