[package]
name = "worldplace_contract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "r/place on the blockchain"
repository = "https://github.com/MrPicklePinosaur/worldplace"

[dependencies]
ethers = { version = "2.0.6", default-features = false, features = ["ethers-solc"] }

worldplace_abi = { path = "../worldplace_abi" }
