[package]
name = "worldplace_contract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "r/place on the blockchain"
repository = "https://github.com/MrPicklePinosaur/worldplace"

[dependencies]
anyhow = "1.0.72"
dotenvy = "0.15.7"
ethers = { version = "2.0.6", default-features = true, features = ["ethers-solc"] }
k256 = "0.13.1"
tokio = {version="1.31.0", features=["full"]}


worldplace_abi = { path = "../worldplace_abi" }
